force-app/main/default/objects/Apttus__DocumentVersion__c/fields/Apttus__CheckoutById__c.field-meta.xml
<CustomField>
    <fullName>Apttus__CheckoutById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the user who checked out this document version</description>
    <inlineHelpText>ID of the user who checked out this document version</inlineHelpText>
    <label>Checkout By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Document_Version</relationshipName>
    <type>Lookup</type>
</CustomField>