force-app/main/default/objects/Apttus__DocumentVersion__c/fields/Apttus__CheckoutDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus__CheckoutDate__c</fullName>
    <description>Date when this document was checked out</description>
    <inlineHelpText>Date when this document was checked out</inlineHelpText>
    <label>Checkout Date</label>
    <type>DateTime</type>
</CustomField>