force-app/main/default/objects/Apttus__DocumentVersion__c/fields/Apttus__CheckoutVersionDetailId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__CheckoutVersionDetailId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the checked out version detail</description>
    <inlineHelpText>ID of the checked out version detail</inlineHelpText>
    <label>Checkout Version Detail</label>
    <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
    <relationshipLabel>Document Versions (Checkout)</relationshipLabel>
    <relationshipName>CheckoutVersionDetail</relationshipName>
    <type>Lookup</type>
</CustomField>