force-app/main/default/objects/Apttus__DocumentVersion__c/fields/Apttus__DocumentType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DocumentType__c</fullName>
    <description>Document type represents type of document in agreement life cycle</description>
    <inlineHelpText>Document type represents type of document in agreement life cycle</inlineHelpText>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agreement Document</fullName>
            </value>
            <value>
                <fullName>Supporting Document</fullName>
            </value>
            <value>
                <fullName>Executed Document</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>