force-app/main/default/objects/Apttus__DocumentVersion__c/fields/Apttus__LatestInsightScore__c.field-meta.xml
<CustomField>
    <fullName>Apttus__LatestInsightScore__c</fullName>
    <description>Total Risk Score of the latest Document</description>
    <inlineHelpText>Total Risk Score of the latest Document</inlineHelpText>
    <label>Latest Insight Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>