force-app/main/default/objects/Apttus__DocumentVersion__c/fields/Apttus__LatestVersionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__LatestVersionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to latest version object</description>
    <inlineHelpText>Lookup to latest version object</inlineHelpText>
    <label>Latest Version Detail</label>
    <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
    <relationshipLabel>Document Versions</relationshipLabel>
    <relationshipName>DocumentVersions</relationshipName>
    <type>Lookup</type>
</CustomField>