force-app/main/default/objects/Apttus__DocumentVersion__c/fields/Apttus__Notes__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Notes__c</fullName>
    <description>The notes associated with the version</description>
    <label>Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>