force-app/main/default/objects/Apttus__DocumentVersion__c/fields/Apttus__NumberOfVersions__c.field-meta.xml
<CustomField>
    <fullName>Apttus__NumberOfVersions__c</fullName>
    <description>Indicates the number of detail versions associated with the version</description>
    <inlineHelpText>Indicates the number of detail versions associated with the version</inlineHelpText>
    <label>Number Of Versions</label>
    <summaryForeignKey>Apttus__DocumentVersionDetail__c.Apttus__DocumentVersionId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>