force-app/main/default/objects/Apttus__DocumentVersion__c/fields/Apttus__ReviewStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ReviewStatus__c</fullName>
    <description>Review Status</description>
    <formula>HYPERLINK(&apos;/apex/Apttus__ParallelReviewCycle?id=&apos;+  Id  , Apttus__LatestReviewCycleStatus__c, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Review Status</inlineHelpText>
    <label>Review Status</label>
    <type>Text</type>
</CustomField>