force-app/main/default/objects/Apttus__DocumentVersion__c/fields/Apttus__Title__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Title__c</fullName>
    <description>Title of the document</description>
    <inlineHelpText>Title of the document</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>