force-app/main/default/objects/Apttus__DocumentVersion__c/fields/Apttus__View__c.field-meta.xml
<CustomField>
    <fullName>Apttus__View__c</fullName>
    <description>View latest version of the document</description>
    <formula>Apttus__LatestVersionId__r.Apttus__View__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>View latest version of the document</inlineHelpText>
    <label>View</label>
    <type>Text</type>
</CustomField>